# new-outfit

./: Application.cpp  Application.h  CMakeLists.txt  ControlIDs.h  FileHandler.cpp  FileHandler.h  FormatConverter.cpp  FormatConverter.h  Main.cpp  MemoryEditor.cpp  MemoryEditor.h  OutfitStructures.h  UIManager.cpp  UIManager.h
.github/workflows/: build.yml
